# CG-Basic-Projects

./: README.md
Blender/: sources.txt
Blender/submission/: office.blend  office.mtl
C++ Introduction/: CMakeLists.txt  assignment.html
C++ Introduction/framework/: CMakeLists.txt
C++ Introduction/framework/include/framework/: opengl_includes.h
C++ Introduction/framework/src/: trackball.cpp  window.cpp
C++ Introduction/src/: main.cpp  your_code_here.h
Ray Intersection/: CMakeLists.txt  assignment.html
Ray Intersection/framework/: CMakeLists.txt
Ray Intersection/src/: draw.cpp  draw.h  main.cpp  ray_tracing.cpp  ray_tracing.h  scene.cpp  scene.h
Shading/: CMakeLists.txt  assignment.html
Shading/framework/include/framework/: trackball.h
Shading/framework/src/: image.cpp
Shading/src/: main.cpp  your_code_here.h
Transformations/robot_arm/: CMakeLists.txt
Transformations/robot_arm/data/: monkey.ply
Transformations/robot_arm/src/: draw.cpp  draw.h  main.cpp  reference_loader.h  your_code_here.h
Transformations/solar_system/: CMakeLists.txt
Transformations/solar_system/data/: readme.txt
Transformations/solar_system/src/: draw.cpp  draw.h  main.cpp  reference_loader.h  reference_saver.h  your_code_here.h
Transformations/solar_system/tests/: CMakeLists.txt  solar_system_tests.cpp
